--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,3 +61,8 @@ padding-top: 10vh;
   border: 1px solid #ecf0f1;
   box-shadow: 0 3px 5px rgba(0,0,0,.08);
 }
+
+.search-box{
+width: 100%;
+text-align: center;
+}
